added svg and input type for onClick affect

--- a/D3.html
+++ b/D3.html
@@ -8,5 +8,10 @@
   </head>
   <body>
     <p>Hello World!</p>
+    <input type="button" value="Hello" onClick="alert('Hello World!');" />
+    <svg width="50" height="50">
+  <rect x="0" y="0" width="50" height="50" fill="green" />
+</svg>
+
   </body>
 </html>
