--- a/project_1.html/D3.html
+++ b/project_1.html/D3.html
@@ -11,7 +11,7 @@
     <p>Hello World!</p>
     <input type="button" value="Hello" onClick="alert('Hello World!');" />
     <svg width="50" height="50">
-  <rect x="0" y="0" width="50" height="50" fill="green" />
+  <rect x="0" y="0" width="50" height="50" fill="blue" />
 </svg>
 
   </body>
