changed HTML example

--- a/project_1.html/D3.html
+++ b/project_1.html/D3.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="text/javascript" src="d3.v2.min.js"></script>
+    <title>TITLE GOES HERE</title>
   </head>
   <body>
-    <p>Hello!</p>
+    <div>
+  <p>Normal paragraph</p>
+
+  <p class="red">Red paragraph</p>
+</div>
+
+<ol>
+  <li id="some-id">Unique element</li>
+  <li>Another list element</li>
+  <li>
+    <p>Paragraph inside list element</p>
+    <p>Second paragraph</p>
+  </li>
+</ol>
   </body>
 </html>
